# SmartRoute_DynamicTrafficControl

./: .hintrc  README.md
Dashboard/: about.html  dashboard.html  index.html
Traffic_Management_Algo/: CMakeLists.txt  main.cpp
Traffic_Management_Algo/controller/: SignalController.h
Traffic_Management_Algo/include/ble/: BLEEvent.h  BLEPriorityManager.h  BLERegistry.h
Traffic_Management_Algo/include/coordination/: CorridorCoordinator.h
Traffic_Management_Algo/include/engine/: EngineConfig.h  PhaseBuilder.h  TrafficEngine.h
Traffic_Management_Algo/include/model/: ConflictMatrix.h  Decision.h  Direction.h  Geometry.h  Lane.h  MovementType.h  Phase.h  Point.h  PriorityReason.h  SignalPhase.h
Traffic_Management_Algo/include/rl/: RLAgent.h
Traffic_Management_Algo/src/ble/: BLEPriorityManager.cpp
Traffic_Management_Algo/src/coordination/: CorridorCoordinator.cpp
Traffic_Management_Algo/src/engine/: PhaseBuilder.cpp  TrafficEngine.cpp
Traffic_Management_Algo/src/model/: ConflictMatrix.cpp
Traffic_Management_Algo/src/rl/: RLAgent.cpp
